lib/src/antlr4/PDSParser.dart
// Generated from antlr\PDS.g4 by ANTLR 4.12.0
// ignore_for_file: unused_import, unused_local_variable, prefer_single_quotes
import 'package:antlr4/antlr4.dart';

import 'PDSListener.dart';
import 'PDSBaseListener.dart';
const int RULE_pdsSyntax = 0, RULE_declaration = 1, RULE_imports = 2, RULE_importStatement = 3, 
          RULE_dataDeclaration = 4, RULE_dataAttributeDefinition = 5, RULE_normalDataAttributeDefinition = 6, 
          RULE_optionalDataAttributeDefinition = 7, RULE_dataIdentifier = 8, 
          RULE_dataDefinition = 9, RULE_dataAttribute = 10, RULE_annotation = 11, 
          RULE_annotationDeclaration = 12, RULE_classDeclaration = 13, RULE_classElementDeclaration = 14, 
          RULE_classExtension = 15, RULE_enumDeclaration = 16, RULE_serviceDeclaration = 17, 
          RULE_requestBlock = 18, RULE_responseBlock = 19, RULE_enumValues = 20, 
          RULE_enumValueReference = 21, RULE_value = 22, RULE_annotationType = 23, 
          RULE_fieldDeclaration = 24, RULE_functionDeclaration = 25, RULE_functionParameters = 26, 
          RULE_functionParameter = 27, RULE_dataType = 28, RULE_basicType = 29, 
          RULE_genericType = 30, RULE_accessModifier = 31, RULE_optional = 32, 
          RULE_literal = 33, RULE_listLiteral = 34;
class PDSParser extends Parser {
  static final checkVersion = () => RuntimeMetaData.checkVersion('4.12.0', RuntimeMetaData.VERSION);
  static const int TOKEN_EOF = IntStream.EOF;

  static final List<DFA> _decisionToDFA = List.generate(
      _ATN.numberOfDecisions, (i) => DFA(_ATN.getDecisionState(i), i));
  static final PredictionContextCache _sharedContextCache = PredictionContextCache();
  static const int TOKEN_T__0 = 1, TOKEN_T__1 = 2, TOKEN_T__2 = 3, TOKEN_T__3 = 4, 
                   TOKEN_T__4 = 5, TOKEN_INT_TYPE = 6, TOKEN_UNSIGNED_INT_TYPE = 7, 
                   TOKEN_LONG_TYPE = 8, TOKEN_UNSIGNED_LONG_TYPE = 9, TOKEN_BOOL_TYPE = 10, 
                   TOKEN_STRING_TYPE = 11, TOKEN_DOUBLE_TYPE = 12, TOKEN_FLOAT_TYPE = 13, 
                   TOKEN_BYTES_TYPE = 14, TOKEN_ServiceType = 15, TOKEN_DAOPolicyUnique = 16, 
                   TOKEN_DAOPolicyNone = 17, TOKEN_DAOPolicyMultiple = 18, 
                   TOKEN_Tilde = 19, TOKEN_Plus = 20, TOKEN_Minus = 21, 
                   TOKEN_Star = 22, TOKEN_Dot = 23, TOKEN_Colon = 24, TOKEN_Assignment = 25, 
                   TOKEN_Semicolon = 26, TOKEN_BlockStart = 27, TOKEN_BlockEnd = 28, 
                   TOKEN_ListStart = 29, TOKEN_ListEnd = 30, TOKEN_LeftParen = 31, 
                   TOKEN_RightParen = 32, TOKEN_Separator = 33, TOKEN_GenericStart = 34, 
                   TOKEN_GenericEnd = 35, TOKEN_M_TO_M = 36, TOKEN_M_TO_S = 37, 
                   TOKEN_S_TO_M = 38, TOKEN_S_TO_S = 39, TOKEN_MapType = 40, 
                   TOKEN_ListType = 41, TOKEN_Class = 42, TOKEN_At = 43, 
                   TOKEN_NumericLiteral = 44, TOKEN_IntegerLiteral = 45, 
                   TOKEN_FloatingPointLiteral = 46, TOKEN_BooleanLiteral = 47, 
                   TOKEN_CharacterLiteral = 48, TOKEN_StringLiteral = 49, 
                   TOKEN_Identifier = 50, TOKEN_WS = 51, TOKEN_FullComment = 52, 
                   TOKEN_LineComment = 53;

  @override
  final List<String> ruleNames = [
    'pdsSyntax', 'declaration', 'imports', 'importStatement', 'dataDeclaration', 
    'dataAttributeDefinition', 'normalDataAttributeDefinition', 'optionalDataAttributeDefinition', 
    'dataIdentifier', 'dataDefinition', 'dataAttribute', 'annotation', 'annotationDeclaration', 
    'classDeclaration', 'classElementDeclaration', 'classExtension', 'enumDeclaration', 
    'serviceDeclaration', 'requestBlock', 'responseBlock', 'enumValues', 
    'enumValueReference', 'value', 'annotationType', 'fieldDeclaration', 
    'functionDeclaration', 'functionParameters', 'functionParameter', 'dataType', 
    'basicType', 'genericType', 'accessModifier', 'optional', 'literal', 
    'listLiteral'
  ];

  static final List<String?> _LITERAL_NAMES = [
      null, "'import'", "'data'", "'meta'", "'enum'", "'service'", null, 
      null, null, null, null, "'string'", "'double'", "'float'", "'bytes'", 
      null, "'unique'", "'none'", "'multiple'", "'~'", "'+'", "'-'", "'*'", 
      "'.'", "':'", "'='", "';'", "'{'", "'}'", "'['", "']'", "'('", "')'", 
      "','", "'<'", "'>'", "'<-->'", "'<=->'", "'<-=>'", "'<==>'", "'Map'", 
      "'List'", "'class'", "'@'"
  ];
  static final List<String?> _SYMBOLIC_NAMES = [
      null, null, null, null, null, null, "INT_TYPE", "UNSIGNED_INT_TYPE", 
      "LONG_TYPE", "UNSIGNED_LONG_TYPE", "BOOL_TYPE", "STRING_TYPE", "DOUBLE_TYPE", 
      "FLOAT_TYPE", "BYTES_TYPE", "ServiceType", "DAOPolicyUnique", "DAOPolicyNone", 
      "DAOPolicyMultiple", "Tilde", "Plus", "Minus", "Star", "Dot", "Colon", 
      "Assignment", "Semicolon", "BlockStart", "BlockEnd", "ListStart", 
      "ListEnd", "LeftParen", "RightParen", "Separator", "GenericStart", 
      "GenericEnd", "M_TO_M", "M_TO_S", "S_TO_M", "S_TO_S", "MapType", "ListType", 
      "Class", "At", "NumericLiteral", "IntegerLiteral", "FloatingPointLiteral", 
      "BooleanLiteral", "CharacterLiteral", "StringLiteral", "Identifier", 
      "WS", "FullComment", "LineComment"
  ];
  static final Vocabulary VOCABULARY = VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  @override
  Vocabulary get vocabulary {
    return VOCABULARY;
  }

  @override
  String get grammarFileName => 'PDS.g4';

  @override
  List<int> get serializedATN => _serializedATN;

  @override
  ATN getATN() {
   return _ATN;
  }

  PDSParser(TokenStream input) : super(input) {
    interpreter = ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  PdsSyntaxContext pdsSyntax() {
    dynamic _localctx = PdsSyntaxContext(context, state);
    enterRule(_localctx, 0, RULE_pdsSyntax);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 70;
      imports();
      state = 74;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while ((((_la) & ~0x3f) == 0 && ((1 << _la) & 1139094046375996) != 0)) {
        state = 71;
        declaration();
        state = 76;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  DeclarationContext declaration() {
    dynamic _localctx = DeclarationContext(context, state);
    enterRule(_localctx, 2, RULE_declaration);
    try {
      state = 83;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 1, context)) {
      case 1:
        enterOuterAlt(_localctx, 1);
        state = 77;
        annotationDeclaration();
        break;
      case 2:
        enterOuterAlt(_localctx, 2);
        state = 78;
        classDeclaration();
        break;
      case 3:
        enterOuterAlt(_localctx, 3);
        state = 79;
        enumDeclaration();
        break;
      case 4:
        enterOuterAlt(_localctx, 4);
        state = 80;
        serviceDeclaration();
        break;
      case 5:
        enterOuterAlt(_localctx, 5);
        state = 81;
        dataDeclaration();
        break;
      case 6:
        enterOuterAlt(_localctx, 6);
        state = 82;
        dataDefinition();
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ImportsContext imports() {
    dynamic _localctx = ImportsContext(context, state);
    enterRule(_localctx, 4, RULE_imports);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 88;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_T__0) {
        state = 85;
        importStatement();
        state = 90;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ImportStatementContext importStatement() {
    dynamic _localctx = ImportStatementContext(context, state);
    enterRule(_localctx, 6, RULE_importStatement);
    try {
      enterOuterAlt(_localctx, 1);
      state = 91;
      match(TOKEN_T__0);
      state = 92;
      match(TOKEN_StringLiteral);
      state = 93;
      match(TOKEN_Semicolon);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  DataDeclarationContext dataDeclaration() {
    dynamic _localctx = DataDeclarationContext(context, state);
    enterRule(_localctx, 8, RULE_dataDeclaration);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 95;
      match(TOKEN_T__1);
      state = 96;
      match(TOKEN_Identifier);
      state = 97;
      match(TOKEN_BlockStart);
      state = 101;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while ((((_la) & ~0x3f) == 0 && ((1 << _la) & 1129198442282944) != 0)) {
        state = 98;
        dataAttributeDefinition();
        state = 103;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 104;
      match(TOKEN_BlockEnd);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  DataAttributeDefinitionContext dataAttributeDefinition() {
    dynamic _localctx = DataAttributeDefinitionContext(context, state);
    enterRule(_localctx, 10, RULE_dataAttributeDefinition);
    try {
      state = 108;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
      case TOKEN_INT_TYPE:
      case TOKEN_UNSIGNED_INT_TYPE:
      case TOKEN_LONG_TYPE:
      case TOKEN_UNSIGNED_LONG_TYPE:
      case TOKEN_BOOL_TYPE:
      case TOKEN_STRING_TYPE:
      case TOKEN_DOUBLE_TYPE:
      case TOKEN_FLOAT_TYPE:
      case TOKEN_BYTES_TYPE:
      case TOKEN_MapType:
      case TOKEN_ListType:
      case TOKEN_Identifier:
        enterOuterAlt(_localctx, 1);
        state = 106;
        normalDataAttributeDefinition();
        break;
      case TOKEN_Tilde:
        enterOuterAlt(_localctx, 2);
        state = 107;
        optionalDataAttributeDefinition();
        break;
      default:
        throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  NormalDataAttributeDefinitionContext normalDataAttributeDefinition() {
    dynamic _localctx = NormalDataAttributeDefinitionContext(context, state);
    enterRule(_localctx, 12, RULE_normalDataAttributeDefinition);
    try {
      enterOuterAlt(_localctx, 1);
      state = 110;
      dataType();
      state = 111;
      match(TOKEN_Identifier);
      state = 112;
      match(TOKEN_Semicolon);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  OptionalDataAttributeDefinitionContext optionalDataAttributeDefinition() {
    dynamic _localctx = OptionalDataAttributeDefinitionContext(context, state);
    enterRule(_localctx, 14, RULE_optionalDataAttributeDefinition);
    try {
      enterOuterAlt(_localctx, 1);
      state = 114;
      optional();
      state = 115;
      dataType();
      state = 116;
      match(TOKEN_Identifier);
      state = 117;
      match(TOKEN_Assignment);
      state = 118;
      value();
      state = 119;
      match(TOKEN_Semicolon);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  DataIdentifierContext dataIdentifier() {
    dynamic _localctx = DataIdentifierContext(context, state);
    enterRule(_localctx, 16, RULE_dataIdentifier);
    try {
      enterOuterAlt(_localctx, 1);
      state = 121;
      match(TOKEN_Identifier);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  DataDefinitionContext dataDefinition() {
    dynamic _localctx = DataDefinitionContext(context, state);
    enterRule(_localctx, 18, RULE_dataDefinition);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 123;
      dataIdentifier();
      state = 124;
      match(TOKEN_Identifier);
      state = 125;
      match(TOKEN_Assignment);
      state = 126;
      match(TOKEN_BlockStart);
      state = 135;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_Identifier) {
        state = 127;
        dataAttribute();
        state = 132;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        while (_la == TOKEN_Separator) {
          state = 128;
          match(TOKEN_Separator);
          state = 129;
          dataAttribute();
          state = 134;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
        }
      }

      state = 137;
      match(TOKEN_BlockEnd);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  DataAttributeContext dataAttribute() {
    dynamic _localctx = DataAttributeContext(context, state);
    enterRule(_localctx, 20, RULE_dataAttribute);
    try {
      enterOuterAlt(_localctx, 1);
      state = 139;
      match(TOKEN_Identifier);
      state = 140;
      match(TOKEN_Colon);
      state = 141;
      value();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  AnnotationContext annotation() {
    dynamic _localctx = AnnotationContext(context, state);
    enterRule(_localctx, 22, RULE_annotation);
    try {
      enterOuterAlt(_localctx, 1);
      state = 149;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 7, context)) {
      case 1:
        state = 143;
        match(TOKEN_At);
        state = 144;
        match(TOKEN_Identifier);
        state = 145;
        match(TOKEN_Assignment);
        state = 146;
        value();
        break;
      case 2:
        state = 147;
        match(TOKEN_At);
        state = 148;
        match(TOKEN_Identifier);
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  AnnotationDeclarationContext annotationDeclaration() {
    dynamic _localctx = AnnotationDeclarationContext(context, state);
    enterRule(_localctx, 24, RULE_annotationDeclaration);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 151;
      match(TOKEN_T__2);
      state = 152;
      match(TOKEN_Identifier);
      state = 155;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_Colon) {
        state = 153;
        match(TOKEN_Colon);
        state = 154;
        annotationType();
      }

      state = 157;
      match(TOKEN_Semicolon);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ClassDeclarationContext classDeclaration() {
    dynamic _localctx = ClassDeclarationContext(context, state);
    enterRule(_localctx, 26, RULE_classDeclaration);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 162;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_At) {
        state = 159;
        annotation();
        state = 164;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 165;
      match(TOKEN_Class);
      state = 166;
      match(TOKEN_Identifier);
      state = 168;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_Colon) {
        state = 167;
        classExtension();
      }

      state = 170;
      match(TOKEN_BlockStart);
      state = 174;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while ((((_la) & ~0x3f) == 0 && ((1 << _la) & 1129198444904384) != 0)) {
        state = 171;
        classElementDeclaration();
        state = 176;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 177;
      match(TOKEN_BlockEnd);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ClassElementDeclarationContext classElementDeclaration() {
    dynamic _localctx = ClassElementDeclarationContext(context, state);
    enterRule(_localctx, 28, RULE_classElementDeclaration);
    try {
      state = 181;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 12, context)) {
      case 1:
        enterOuterAlt(_localctx, 1);
        state = 179;
        fieldDeclaration();
        break;
      case 2:
        enterOuterAlt(_localctx, 2);
        state = 180;
        functionDeclaration();
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ClassExtensionContext classExtension() {
    dynamic _localctx = ClassExtensionContext(context, state);
    enterRule(_localctx, 30, RULE_classExtension);
    try {
      enterOuterAlt(_localctx, 1);
      state = 183;
      match(TOKEN_Colon);
      state = 184;
      match(TOKEN_Identifier);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  EnumDeclarationContext enumDeclaration() {
    dynamic _localctx = EnumDeclarationContext(context, state);
    enterRule(_localctx, 32, RULE_enumDeclaration);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 189;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_At) {
        state = 186;
        annotation();
        state = 191;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 192;
      match(TOKEN_T__3);
      state = 193;
      match(TOKEN_Identifier);
      state = 194;
      match(TOKEN_BlockStart);
      state = 195;
      enumValues();
      state = 196;
      match(TOKEN_BlockEnd);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ServiceDeclarationContext serviceDeclaration() {
    dynamic _localctx = ServiceDeclarationContext(context, state);
    enterRule(_localctx, 34, RULE_serviceDeclaration);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 201;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_At) {
        state = 198;
        annotation();
        state = 203;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 204;
      match(TOKEN_T__4);
      state = 205;
      match(TOKEN_Identifier);
      state = 206;
      requestBlock();
      state = 207;
      match(TOKEN_ServiceType);
      state = 208;
      responseBlock();
      state = 209;
      match(TOKEN_Semicolon);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  RequestBlockContext requestBlock() {
    dynamic _localctx = RequestBlockContext(context, state);
    enterRule(_localctx, 36, RULE_requestBlock);
    try {
      enterOuterAlt(_localctx, 1);
      state = 211;
      match(TOKEN_LeftParen);
      state = 212;
      match(TOKEN_Identifier);
      state = 213;
      match(TOKEN_RightParen);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ResponseBlockContext responseBlock() {
    dynamic _localctx = ResponseBlockContext(context, state);
    enterRule(_localctx, 38, RULE_responseBlock);
    try {
      enterOuterAlt(_localctx, 1);
      state = 215;
      match(TOKEN_Identifier);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  EnumValuesContext enumValues() {
    dynamic _localctx = EnumValuesContext(context, state);
    enterRule(_localctx, 40, RULE_enumValues);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 217;
      match(TOKEN_Identifier);
      state = 222;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_Separator) {
        state = 218;
        match(TOKEN_Separator);
        state = 219;
        match(TOKEN_Identifier);
        state = 224;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 225;
      match(TOKEN_Semicolon);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  EnumValueReferenceContext enumValueReference() {
    dynamic _localctx = EnumValueReferenceContext(context, state);
    enterRule(_localctx, 42, RULE_enumValueReference);
    try {
      enterOuterAlt(_localctx, 1);
      state = 227;
      match(TOKEN_Identifier);
      state = 228;
      match(TOKEN_Dot);
      state = 229;
      match(TOKEN_Identifier);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ValueContext value() {
    dynamic _localctx = ValueContext(context, state);
    enterRule(_localctx, 44, RULE_value);
    try {
      state = 234;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 16, context)) {
      case 1:
        enterOuterAlt(_localctx, 1);
        state = 231;
        literal();
        break;
      case 2:
        enterOuterAlt(_localctx, 2);
        state = 232;
        match(TOKEN_Identifier);
        break;
      case 3:
        enterOuterAlt(_localctx, 3);
        state = 233;
        enumValueReference();
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }
